Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 6.12.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Čokoládový dort Paříž bez lepku  </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Tiramisu</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Jáhlový puding s jablečným pyré, bez lepku a bez laktózy  </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s višněmi, tvarohem a drobenkou</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Batátový krém s kokosovým mlékem, pažitka samostatně  <em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Batátový krém s kokosovým mlékem, pažitka s menu <em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Krůtí prso na bylinkách, sýrová omáčka, grenaille pečené na másle, kedlubna <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Spaghetti bolognese, parmazán, bazalka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Indický dhal z červené čočky, brokolice, basmati rýže, sezamová semínka, koriandr  <em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
