Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pondělí, 06. 12. 2021</h5>
+<h5>Úterý, 07. 12. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Hrachová polévka s klobásou</strong>
@@ -50,54 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pondělí 6.12.2021</div>
+<div class="nadpis">Úterý 7.12.2021</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Čokoládový dort Paříž bez lepku  </div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Tiramisu</div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Jáhlový puding s jablečným pyré, bez lepku a bez laktózy  </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Linecký koláč s višněmi, tvarohem a drobenkou</div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Batátový krém s kokosovým mlékem, pažitka samostatně  <em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Batátový krém s kokosovým mlékem, pažitka s menu <em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Krůtí prso na bylinkách, sýrová omáčka, grenaille pečené na másle, kedlubna <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>300g Spaghetti bolognese, parmazán, bazalka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Indický dhal z červené čočky, brokolice, basmati rýže, sezamová semínka, koriandr  <em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -108,13 +63,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s hříbky a vejcem</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Kyselice s hříbky</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Smažený sýr, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">119,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené masové karbanátky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"> Nudličky z vepřové panenky na jemné kari omáčce, dušená jasmínová rýže</td><td class="menuPrice">138,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Špíz z vepřové pečeně na grilu se zeleninou, anglickou slaninou a cibulí, smažené bramborové plátky, mexický dip</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka, hráškové pyré se sýrem, vaječné grusetky na grilu, grilované rajče, parmazán</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine s tomatovou omáčkou, filírovaná kuřecí prsa, parmazán</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné cibulové omáčce, restované špecle, vídeňská cibulka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát s citronovo-hořčičným dresinkem, kuřecí nudličky z grilu, vařené vejce, tortilový chips</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">2 + 1</td><td class="menuName">Staropramen EXTRA CHMELENÁ 12%, Alk. 5,2%, IBU 32 - dej si dvě čepované, a dostaneš domů 0,5l plechovku</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1 + 1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe, Svatovavřinecké) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">200g</td><td class="menuName">Španělský vepřový ptáček, kynuté houskové knedlíky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí pečeně na houbách, dušená jasmínová rýže</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněné bramborové knedlíky s uzeným masem a bílým zelí, škvarky na sádle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové výpečky, bramborové knedlíky, špenát</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: Rybí file na roštu, grilovaná brokolice s paprikou a fazolovými lusky na olivovým oleji, sypané parmazánem, míchané vajíčka na cibulce</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine s chilli papričkou, česnekem a sušenými rajčaty, filírovaná kuřecí prsa, parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné smetanové omáčce s hříbky, restované špecle</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortila plněná plátkovanou vepřovou panenkou, sýrem, zeleninou, ledovým salátem a česnekovým dresinkem, smažené bramborové plátky, mexický dip   </td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny, promíchaný medovo-hořčičným dresinkem, filírovaná kuřecí prsa, olivy</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">1+1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Mangovo-smetanová panacotta </td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Staropramen EXTRA CHMELENÁ 12%, Alk. 5,2%, IBU 32 - dej si dvě čepované, a dostaneš domů 0,5l plechovku</h5><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -125,7 +83,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Italská minestrone se zeleninou a sýrem Forte Classico 7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">350g</td><td class="title">Pečená vepřová žebra s bramborovou kaší a Coleslaw salátem 1a,3,7,10</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Quesadilla s hovězím ragú, rajčatovou salsou, dresinkem z Gorgonzoly a trhaným salátem 1a,3,7,10</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Vepřové rizoto se zeleninou, sypané sýrem Gouda se salátem z červené řepy 7,9</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Kuřecí vývar se zeleninou, masem a šunkovým svítkem 1a,3,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Svíčková na smetaně, brusinky, naše karlovarské knedlíky 1a,3,7,9,10,12</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hrachová kaše s uzeným vepřovým bůčkem a variací klobásek se smaženou cibulkou a nakládanou okurkou 1a</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Burger s hovězím masem Angus, anglickou slaninou, čedarem, zeleninou, hranolky a chipotle majonézou 1a,3,7,10,11</td><td class="pricem">145 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
