Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Úterý, 07. 12. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Hrachová polévka s klobásou</strong>
+<strong>Bramborovo - mrkvová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Znojemská hovězí pečeně s rýží</strong>
+<strong>Pečený hermelín s vařeným bramborem a chilli majonézou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Salát s grilovanými kuřecími špalíky a bagetkou</strong>
+<strong>Hovězí roláda na tymiánu s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							133,-
 						</span>
 </p>
 <p>
