--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 7.12.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Pařížský čoko dort bez lepku</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Tiramisu</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Jáhlový puding s jablečným pyré, bez lepku a bez laktózy  </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s višněmi, tvarohem a drobenkou</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bramborový krém, restované houby, pažitka samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bramborový krém, restované houby, pažitka s menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí svíčková na smetaně, houskový knedlík, citron, brusinky <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Vepřové karé zapečené s olivami a modrým sýrem, šťouchané brambory s pórkem <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Palačinky plněné ratatouille zeleninou, mozzarella, rukola, bylinkové přesto <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -91,7 +136,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a tapenadou z cernych oliv, teply cockovy salat s paprikami a zeleninou 139</li><li>Peceny filet z cerstrveho halibuta s pecenymi rajcaty a tapenadou z cernych oliv, teply cockovy salat s paprikami a zeleninou 169</li><li>Palive bengalske jalfrezi s krutim masem, pecenymi paprikami, cerstvym chilli a lzici zakysane smetany, jasminova ryze, salatek 139</li><li>Grilovane medailonky ze seleciho hrbetu a kyty s merunkovym catny, gratinovane brambory, salatek 169</li><li>Cizrnovy hummus s restovanymi zampiony na cibulce, arabske placky, salatek 139</li></ol>
+<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 139</li><li>Bramborove gnocchi s uzenym lososem nerka, koprem kaparami a smetanou, salatek 169</li><li>Sefardske kachni sofrito s bramborami, vonavym korenim a citronem,  salatek, ciabatta {L} 139</li><li>Grilovane medailonky z australskeho hoveziho krku {angus} se susenymi rajcaty a zelenymi peprem, kroupy s pecenou zeleninou, salatek 169</li><li>Jihoindicke kvetakove kari s ananasem, cizrnou, rajcaty, zazvorem a jogurtem, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
