Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -136,7 +136,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 139</li><li>Bramborove gnocchi s uzenym lososem nerka, koprem kaparami a smetanou, salatek 169</li><li>Sefardske kachni sofrito s bramborami, vonavym korenim a citronem,  salatek, ciabatta {L} 139</li><li>Grilovane medailonky z australskeho hoveziho krku {angus} se susenymi rajcaty a zelenymi peprem, kroupy s pecenou zeleninou, salatek 169</li><li>Jihoindicke kvetakove kari s ananasem, cizrnou, rajcaty, zazvorem a jogurtem, jasminova ryze 139</li></ol>
+<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 139</li><li>Bramborove gnocchi s uzenym lososem nerka, koprem kaparami a smetanou, salatek  ( L) 169  </li><li>Sefardske kachni sofrito s bramborami, vonavym korenim a citronem,  salatek, ciabatta {L} 139</li><li>Grilovane medailonky z australskeho hoveziho krku {angus} se susenymi rajcaty a zelenymi peprem, kroupy s pecenou zeleninou, salatek 169</li><li>Jihoindicke kvetakove kari s ananasem, cizrnou, rajcaty, zazvorem a jogurtem, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
