Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -88,7 +88,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Vepřové karé zapečené s olivami a modrým sýrem, šťouchané brambory s pórkem <em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">2. </span>150g Vepřové karé zapečené s olivami, modrým sýrem a sýrem cheddar, šťouchané brambory s pórkem <em title="Mléko">7</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
