Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 8.12.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Chia puding s kokosovým mlékem, mango - bez lepku a laktózy</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s višněmi, tvarohem a drobenkou</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Medovník s čokoládou</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Karotkový krém s rajčatovým pestem samostatně   <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Karotkový krém s rajčatovým pestem s menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí roláda plněná špenátem a vajíčkem, bramborová kaše, nakládaná zelenina <em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Masové kuličky v marinara omáčce, tarhoňa, parmazán, oregano <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Pohankové risotto s pórkem a hráškem, bylinková ricotta, cherry rajčata <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -63,10 +103,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
+<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+</table><table class="table">
+<tbody>
 <h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramboračka s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">TOP</td><td class="menuName">150g Medailonky z vepřové panenky v sýrovém těstíčku, mačkané brambory s cibulkou</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šenkýrenský hovězí guláš s cibulí a beraním rohem, karlovarské knedlíky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová kýta na slanině, dušená jasmínová rýže</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu s kukuřicí a pórkem, sázené vejce, pečené brambory s kmínem</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka na jemné omáčce z modrého sýra, grilovaná karotka s kukuřicí, grusetky</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Katův šleh z vepřové kýty, smažené bramborové hranolky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše bramborové noky se smetanou a listovým špenátem, filírovaná kuřecí prsa, strouhaný parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Plátkované vepřové karé pečené dorůžova na zelených fazolkách s anglickou slaninou, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuskusový salát s čerstvou zeleninou, plátkovaná dorůžova pečená vepřová panenka, vařené vejce, hoblinky parmazánu</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen EXTRA CHMELENÁ 12%, Alk. 5,2%, IBU 32 - dej si dvě čepované, a dostaneš domů 0,5l plechovku</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Medailonky z vepřové panenky v sýrovém těstíčku, mačkané brambory s cibulkou</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šenkýrenský hovězí guláš s cibulí a beraním rohem, karlovarské knedlíky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová kýta na slanině, dušená jasmínová rýže</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu s kukuřicí a pórkem, sázené vejce, pečené brambory s kmínem</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka na jemné omáčce z modrého sýra, grilovaná karotka s kukuřicí, grusetky</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Katův šleh z vepřové kýty, smažené bramborové hranolky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše bramborové noky se smetanou a listovým špenátem, filírovaná kuřecí prsa, strouhaný parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Plátkované vepřové karé pečené dorůžova na zelených fazolkách s anglickou slaninou, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuskusový salát s čerstvou zeleninou, plátkovaná dorůžova pečená vepřová panenka, vařené vejce, hoblinky parmazánu</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen EXTRA CHMELENÁ 12%, Alk. 5,2%, IBU 32 - dej si dvě čepované, a dostaneš domů 0,5l plechovku</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</h5><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
@@ -91,7 +134,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 139</li><li>Bramborove gnocchi s uzenym lososem nerka, koprem kaparami a smetanou, salatek  ( L) 169  </li><li>Sefardske kachni sofrito s bramborami, vonavym korenim a citronem,  salatek, ciabatta {L} 139</li><li>Grilovane medailonky z australskeho hoveziho krku {angus} se susenymi rajcaty a zelenymi peprem, kroupy s pecenou zeleninou, salatek 169</li><li>Jihoindicke kvetakove kari s ananasem, cizrnou, rajcaty, zazvorem a jogurtem, jasminova ryze 139</li></ol>
+<ol><li>Thajske kari s kousky rybich filetu, kvetakem, pak coj, kokosovym mlekem a arasidy, jasminova ryze 139</li><li>Peceny filet z cerstveho norskeh lososa s kaparovym maslem, stouchane brambory s kapustou, salatek z cervene repy 169</li><li>Burrito s mexickym carnitas {trhane veprove} a goudou, pecene baby brambory, jogurtovy dip, salatek {L} 139</li><li>Peceny kralik na dijonske horcici, bilem vine a slanine {Lapin a la moutarde}, gratinovane brambory s cibulkou a goudou, salatek 169</li><li>Imam bayildi – zapeceny lilek na turecky zpusob s rajcaty, restovanou cibulkou a balkanskym syrem, pohanka, salatek 139</li></ol>
 </td>
 </tr>
 </table>
