Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Středa, 08. 12. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Bramborovo - mrkvová</strong>
+<strong>Kapustová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Pečený hermelín s vařeným bramborem a chilli majonézou</strong>
+<strong>Grilovaná makrela na citronu a šalvěji s pečeným bramborem a pažitkovým dipem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Hovězí roláda na tymiánu s rýží</strong>
+<strong>Špagety s pestem, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							133,-
+							129,-
 						</span>
 </p>
 <p>
