Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,22 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 9.12.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s červenou čočkou samostatně  <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s červenou čočkou s menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Bramborový knedlík plněný kachním masem, červené zelí, fenykl, perníkové puré, pečená cibulka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -85,7 +100,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske kari s kousky rybich filetu, kvetakem, pak coj, kokosovym mlekem a arasidy, jasminova ryze 139</li><li>Peceny filet z cerstveho norskeh lososa s kaparovym maslem, stouchane brambory s kapustou, salatek z cervene repy 169</li><li>Burrito s mexickym carnitas {trhane veprove} a goudou, pecene baby brambory, jogurtovy dip, salatek {L} 139</li><li>Peceny kralik na dijonske horcici, bilem vine a slanine {Lapin a la moutarde}, gratinovane brambory s cibulkou a goudou, salatek 169</li><li>Imam bayildi – zapeceny lilek na turecky zpusob s rajcaty, restovanou cibulkou a balkanskym syrem, pohanka, salatek 139</li></ol>
+<ol><li>Peceny pstruh s ananasovou salsou, korenena ryze s beluga cockou, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka s ananasovou salsou, korenena  ryze s beluga cockou, salatek 175</li><li>Boeuf bourgignon – hovezi na cervenem vine s korenovou zeleninou, zampiony, tymianem a slaninou, jasminova ryze, salatek 139</li><li>Bramborove gnocchi s uzenymi prsicky divoke kachny, susenymi rajcaty, kapustou a zralou goudou, salatek  {L} 169</li><li>Kvetakovo-brokolicove placicky, stouchane brambory s kapustou, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
