--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Čtvrtek, 09. 12. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kapustová</strong>
+<strong>Tomatová s pestem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Grilovaná makrela na citronu a šalvěji s pečeným bramborem a pažitkovým dipem</strong>
+<strong>Kuřecí plátek v sýrovém těstíčku se šťouchaným bramborem a americkou majonézou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Špagety s pestem, kuřecím masem a parmazánem</strong>
+<strong>Žampionové palačinky s restovanou slaninou a krémovou omáčkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							125,-
 						</span>
 </p>
 <p>
@@ -52,6 +52,21 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 9.12.2021</div>
 <ul>
+<li class="poznamka">
+<div class="polozka">Medovník </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Chia puding s kokosovým mlékem, mango - bez lepku a laktózy</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s višněmi, tvarohem a drobenkou</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Tomatová polévka s červenou čočkou samostatně  <em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">39 Kč</div>
@@ -63,8 +78,18 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Bramborový knedlík plněný kachním masem, červené zelí, fenykl, perníkové puré, pečená cibulka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">1. </span>150g Bramborový knedlík plněný kachním masem, červené zelí, perníkové puré, pečená cibulka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
 <div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Kuřecí soté s dýní hokaido, dušená rýže, jarní cibulka <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Grilovaný lilek zapečený s rajčaty a mozzarellou, vařené brambory, dip že sušených rajčat, bazalka <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
 </ul>
