--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pátek, 10. 12. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Tomatová s pestem</strong>
+<strong>Kari polévka s červenou čočkou a slaninou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí plátek v sýrovém těstíčku se šťouchaným bramborem a americkou majonézou</strong>
+<strong>Frankfurtská Vepřová plec s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Žampionové palačinky s restovanou slaninou a krémovou omáčkou</strong>
+<strong>Skořicové lívance s borůvkami a sladkým jogurtem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							105,-
 						</span>
 </p>
 <p>
