--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,37 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 10.12.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Medovník</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Míša dort bez lepku</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Špenatový krém, krutony samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Špenatový krém, krutony s menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí kýta, teriyaki omáčka, jasmínová rýže, čerstvá zelenina, koriandr, sezam <em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Portobello burger, sýr cheddar, karamelizovaná cibulka, pečené grenaillle, bbq majonéza <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -88,7 +118,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny pstruh s ananasovou salsou, korenena ryze s beluga cockou, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka s ananasovou salsou, korenena  ryze s beluga cockou, salatek 175</li><li>Boeuf bourgignon – hovezi na cervenem vine s korenovou zeleninou, zampiony, tymianem a slaninou, jasminova ryze, salatek 139</li><li>Bramborove gnocchi s uzenymi prsicky divoke kachny, susenymi rajcaty, kapustou a zralou goudou, salatek  {L} 169</li><li>Kvetakovo-brokolicove placicky, stouchane brambory s kapustou, tatarska omacka {L} 139</li></ol>
+<ol><li>Peceny filet z norskeho slede s citronem a koprovym maslem, bramborovy salat s cervenou repou, cibulkou a majonezou 139</li><li>Peceny filet z cerstveho norskeho lososa s citronem a koprovym maslem, bramborovy salat s cervenou repou, cibulkou a majonezou 169</li><li>Medailonky z krutich prsou v citronove omacce se zazvorem a kokosovym mlekem, jasminova ryze, salatek 139</li><li>Burrito s pikantnimi kancimi nudlickami s fazolemi, pecenymi paprikami a cerstvym chilli, pecene brambory, jogurtovy dip, salatek {L} 169</li><li>Pakora {cizrnove smazenky} s dyni, restovanou cibulkou, paprikami a panc phoron, korenena ryze s cockou, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
